# leo_nerf_turret

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: joy_mapping.yaml  joy_mapping_24v.yaml
include/: PIDController.h
launch/: camera.launch  hit_detector.launch  turret.launch  turret_camera.launch  turret_duped.launch
scripts/: IMU_hit_detector.py  IMU_hit_detector_with_filter.py  IMU_hit_detector_with_spike_detector.py  Spike_detector.py  haarcascade_test.py  hit_detector_GPT_made.py  hit_event_handler.py  hog_test.py  microphone_hit_detector.py  pose_detector.py  pose_fps_limit_rosV2.py
src/: PIDController.cpp  turret_node.cpp  turret_node_camera.cpp  turret_node_duplicated_dynamixel.cpp
